Add the shipping module and bump to nightly stack

--- a/package.yaml
+++ b/package.yaml
@@ -37,6 +37,13 @@ library:
   - monad-control
   - transformers
   - transformers-base
+  - megaparsec >=6.2
+  - cryptohash
+  - bytestring
+  - random-source
+  - random-fu
+  - random
+  - text-format
 executables:
   aradia-exe:
     main: Main.hs
