--- a/aradia-discord-gateway/aradia-discord-gateway.cabal
+++ b/aradia-discord-gateway/aradia-discord-gateway.cabal
@@ -19,11 +19,11 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Network.Discord.Gateway
   build-depends:       base==4.*
-                     , aeson>=1.0 && <1.2
+                     , aeson>=1.0 && <1.3
                      , hslogger==1.2.*
                      , transformers==0.5.*
                      , url==2.1.*
-                     , websockets==0.10.*
+                     , websockets >=0.12
                      , wuss==1.1.*
                      , aradia-discord-types
                      , lifted-base
